# Quantathon2026

./: .gitignore  README.md  classical_model.py  main.py  metrics.py  nexus_kernel.py  prepare_data.py  pyproject.toml  quantum_model.py  requirements.txt
.github/workflows/: ci.yml
PapiAdrian/: README.md  requirements.txt  run_devices.py  run_qsvm.py
PapiAdrian/.claude/: settings.local.json
PapiAdrian/outputs/: K_train.npy  metrics.json
PapiAdrian/qsvm/: __init__.py  backend_pytket.py  circuits.py  data.py  kernel.py  list_devices.py  metrics.py  model.py  nexus_backend.py  run.py
configs/: full.yaml  smoke.yaml
data/processed/: README.md  X_test.csv  X_train.csv  X_train_raw.csv  metadata.json  y_train.csv  y_train_raw.csv
data/quantum_subset/: README.md  quantum_subset_16.csv  quantum_subset_32.csv
data/raw/: README.md
notebooks/: 01_eda.ipynb  02_classical_baseline.ipynb  03_quantum_kernel.ipynb  04_feature_map_study.ipynb  README.md
report/: README.md
results/figures/: README.md
results/metrics/: README.md  classical_baseline.json  classical_optuna.json
scripts/: README.md  activate.ps1  check_notebook_errors.py  reset.ps1  run.ps1  run_all.ps1  run_nexus_kernel.py  run_notebooks.ps1  run_smoke.ps1  setup.ps1
slides/: README.md
src/: __init__.py  config.py
src/classical/: README.md  __init__.py  baseline.py  controls.py  optuna_search.py  pipelines.py
statement/: enunciado-challenge-2.docx  enunciado-challenge2.md
tests/: test_classical_pipeline.py  test_data_contracts.py  test_metrics.py  test_quantum_kernel.py
(+17 files in other folders)
